--- a/Controller Query String Versioning/Controller Query String Versioning.csproj
+++ b/Controller Query String Versioning/Controller Query String Versioning.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Controller___URL_Versioning</RootNamespace>
+    <RootNamespace>Controller_Query_String_Versioning</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="NuGet.Versioning" Version="6.14.0" />
   </ItemGroup>
